Fix services.html. On mobile screens below 400px wide, text in wrap caption overlapping with carousel caption. Also fix carosel position overflow on screens below 400px. Both fix with media query.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,6 @@ html, body {
 
 /* ------- Navbar -------- */
 
-
 .bg-img {
     background-image: url("https://images.unsplash.com/photo-1597404294360-feeeda04612e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
     height: 350px;
@@ -25,12 +24,10 @@ html, body {
    
 }
 
-
 .navbar-brand img {
     position: relative;
-    opacity: 0.8   
+    opacity: 0.9;   
 }
-
 
 .navbar {
     background-color:rgba(0, 48, 73, 0.9);
@@ -40,10 +37,8 @@ html, body {
     z-index: 99;
 }
 
-
 .navbar-nav {
     margin: 0 auto;
-    
 }
 
 .navbar-toggler {
@@ -468,4 +463,25 @@ li {
     width: 100%;
     height: 100%;
 
+}
+
+/* ----- Media Query -----  */
+
+
+
+@media screen and (max-width: 400px) {
+    .wrap-caption {
+    position: relative;
+    bottom: 30px;
+    z-index: 5;
+    margin: auto;
+    font-size: 1rem;
+    padding: 0px 25px;
+    }
+
+    .carousel-one {
+    position: relative;
+    bottom: 50px;
+    right: 19px;
+    }
 }
